# python-tempestconf

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
config_tempest/: __init__.py  accounts.py  api_discovery.py  clients.py  config_tempest.py  constants.py  credentials.py  flavors.py  main.py  profile.py  tempest_conf.py  users.py  utils.py
config_tempest/services/: alarming.py  aws.py  baremetal.py  base.py  boto.py  ceilometer.py  compute.py  data-processing.py  database.py  dns.py  event.py  horizon.py  identity.py  image.py  key_manager.py  messaging.py  metric.py  network.py  object_storage.py  octavia.py  orchestration.py  services.py  share.py  telemetry.py  volume.py  workflowv2.py
config_tempest/tests/: base.py  base_config_tempest_test.py  base_service_test.py  test_accounts.py  test_api_discovery_methods.py  test_api_discovery_services.py  test_clients.py  test_config_tempest.py  test_config_tempest_image.py  test_config_tempest_network.py  test_config_tempest_user.py  test_credentials.py  test_flavors.py  test_profile.py  test_tempest_conf.py  test_tempest_config.py  test_users.py
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  overview.rst  usage.rst
etc/: default-overrides.conf
playbooks/: python-tempestconf-tempest-devstack.yaml  python-tempestconf-tempest-packstack.yaml  upload-logs.yaml
python_tempestconf/: __init__.py
python_tempestconf/cmd/: configure_tempest.py  main.py
python_tempestconf/tests/: base.py  test_python_tempestconf.py
releasenotes/notes/: Add-argument-for-converting-images-b3ea78ce1faf9df6.yaml  Add-argument-which-allows-users-to-add-extensions-f7b82af27d603c18.yaml  Add-heat-plugin-support-539c28e2b4376224.yaml  Add-profile-argument-70bfa9606826ff81.yaml  Add-retry-when-downloading-file-1ba9f2b03b6ef258.yaml  Do-not-expose-user-credentials-1ffba4d72798b5c9.yaml  Generate-accounts.yaml-6d929b3e78298579.yaml  Load-deployer-input-file-automatically-1dd7c816854a18a7.yaml  Remove-default-overrides.conf-9ad55f5ef953ab06.yaml  Remove-options-prefixed-by-admin_-from-tempest.conf-f038f679b40daaea.yaml  Rename-the-section-for--boto-options-f3552516219d70fa.yaml  Replace-os_client_config-module-by-openstacksdk-4a52d8c953d92a41.yaml  add-os_client_config_support-dd093b137edd8c91.yaml  add-support-for-admin-parameter-moving-to-auth-a0873bb19ea8428b.yaml  add-volume-api-microversion-e467aa570acf79d2.yaml  add_octavia-2ffffc95bca6176b.yaml  add_unit_tests-0b6f43f7c7662703.yaml  allow-non-admin-user-upload-image-f2274cdec154a76b.yaml  basic-default-config-06cf8e66e23d694f.yaml  default_endpoint_type-792092b7027768ae.yaml  deprecate-compute-feature-enabled-api_extensions-df602e3835a47816.yaml  discover-barbican-service-f211c170f58735e3.yaml  discover-designate-service-238e4191c7251cd7.yaml  drop-py2-7-5f618ce22079b071.yaml  enable-manila-in-config-script-16fa079d3d70e922.yaml  image_ssh_user-option-in-validation-section-7cd0a6f44a8fdc1f.yaml  nova-improvements-5a0600f022ab797c.yaml  remove-configuration-values-from-cli-c5c8eb496e1ed3d7.yaml  remove-network-extension-2baca1416c8103a7.yaml  remove-nova-network-support-79e70a0590a638c9.yaml  replace-tenant-by-project,-part-1-638068c6c5c5ef9c.yaml  replace-tenant-isolation-with-dynamic-creds-e79e46c03851ff1c.yaml  start-using-reno-68d4822192825827.yaml  unique-demo-user-name-fd9428a2d8efdc82.yaml  use-healthcheck-api-for-swift-e84cbb999be4ec3d.yaml
releasenotes/source/: conf.py  index.rst
roles/create-clouds-yaml-file/: README.rst
roles/create-keystonerc-files/: README.rst
roles/generate-accounts-file/: README.rst
roles/install-plugins/: README.rst
(+43 files in other folders)
