[metadata]
name = python_tempestconf
summary = "Creates a recommended configuration to run tempest based on api discovery."
description-file =
    README.rst
author = Daniel Mellado
author-email = dmellado@redhat.com
home-page = http://www.redhat.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    python_tempestconf

[entry_points]
console_scripts =
    python_tempestconf = python_tempestconf.cmd.main:main
python_tempestconf.cm =
    configure = python_tempestconf.cmd.configure_tempest:TempestConf

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = python_tempestconf/locale
domain = python_tempestconf

[update_catalog]
domain = python_tempestconf
output_dir = python_tempestconf/locale
input_file = python_tempestconf/locale/python_tempestconf.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = python_tempestconf/locale/python_tempestconf.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[pbr]
warnerrors = True

[wheel]
universal = 1
