[metadata]
name = python-tempestconf
summary = python-tempestconf will automatically generates the tempest configuration based on your cloud.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://pypi.org/project/python-tempestconf
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    config_tempest

[entry_points]
console_scripts =
    discover-tempest-config = config_tempest.main:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
