[metadata]
name = python-tempestconf
summary = python-tempestconf will automatically generates the tempest configuration based on your cloud.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://pypi.org/project/python-tempestconf
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    config_tempest

[entry_points]
console_scripts =
    discover-tempest-config = config_tempest.main:main
